--- a/SayTheWord/app/src/main/res/layout/item_irregular_verb.xml
+++ b/SayTheWord/app/src/main/res/layout/item_irregular_verb.xml
@@ -27,10 +27,11 @@
 			<androidx.constraintlayout.widget.ConstraintLayout
 				android:layout_width="wrap_content"
 				android:layout_height="match_parent"
-				android:layout_gravity="center">
+				android:layout_gravity="center"
+				android:layout_weight="1">
 
 				<androidx.constraintlayout.widget.ConstraintLayout
-					android:layout_width="match_parent"
+					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					app:layout_constraintBottom_toBottomOf="parent"
 					app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +44,7 @@
 						android:layout_height="wrap_content"
 						android:layout_gravity="center"
 						android:gravity="center"
-						android:text="Palabra"
+						android:text="Palabraff ff ff ff ff ff"
 						android:textSize="18dp"
 						android:textStyle="bold"
 						app:layout_constraintEnd_toEndOf="parent"
@@ -54,13 +55,14 @@
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:layout_gravity="center"
+						android:layout_marginTop="16dp"
 						android:gravity="center"
 						android:text="Palabra"
 						android:textSize="18dp"
 						android:textStyle="bold"
 						app:layout_constraintEnd_toEndOf="parent"
 						app:layout_constraintStart_toStartOf="parent"
-						tools:layout_editor_absoluteY="40dp" />
+						app:layout_constraintTop_toBottomOf="@+id/tvInfinitivo" />
 				</androidx.constraintlayout.widget.ConstraintLayout>
 			</androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -111,7 +113,7 @@
 				android:id="@+id/lyRespuesta"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				android:layout_weight="1"
+				android:layout_weight="10"
 				android:visibility="invisible">
 
 				<androidx.constraintlayout.widget.ConstraintLayout
