--- a/SayTheWord/app/src/main/res/layout/item_irregular_verb.xml
+++ b/SayTheWord/app/src/main/res/layout/item_irregular_verb.xml
@@ -114,7 +114,7 @@
 				android:layout_width="0dp"
 				android:layout_height="match_parent"
 				android:layout_weight="7"
-				android:visibility="invisible">
+				android:visibility="visible">
 
 				<androidx.constraintlayout.widget.ConstraintLayout
 					android:layout_width="wrap_content"
@@ -124,57 +124,68 @@
 					app:layout_constraintStart_toStartOf="parent"
 					app:layout_constraintTop_toTopOf="parent">
 
-					<TextView
-						android:id="@+id/tvPasado"
+					<androidx.constraintlayout.widget.ConstraintLayout
+						android:id="@+id/constraintLayout4"
 						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_gravity="center"
-						android:gravity="center"
-						android:text="Titulo"
-						android:textSize="18dp"
-						android:textStyle="bold"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toTopOf="parent" />
+						android:layout_height="wrap_content">
 
-					<TextView
-						android:id="@+id/tvParticipio"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_gravity="center"
-						android:layout_marginStart="32dp"
-						android:gravity="center"
-						android:text="Titulo"
-						android:textSize="18dp"
-						android:textStyle="bold"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintStart_toEndOf="@+id/tvPasado"
-						app:layout_constraintTop_toTopOf="parent" />
+						<TextView
+							android:id="@+id/tvPasado"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:gravity="center"
+							android:text="Titulo"
+							android:textSize="18dp"
+							android:textStyle="bold"
+							app:layout_constraintStart_toStartOf="parent"
+							app:layout_constraintTop_toTopOf="parent" />
 
-					<TextView
-						android:id="@+id/tvPasadoPronunciacion"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_gravity="center"
-						android:layout_marginTop="8dp"
-						android:gravity="center"
-						android:text="Titulo"
-						android:textSize="18dp"
-						android:textStyle="bold"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/tvPasado" />
+						<TextView
+							android:id="@+id/tvPasadoPronunciacion"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:layout_marginTop="8dp"
+							android:gravity="center"
+							android:text="Titulo"
+							android:textSize="18dp"
+							android:textStyle="bold"
+							app:layout_constraintStart_toStartOf="parent"
+							app:layout_constraintTop_toBottomOf="@+id/tvPasado" />
+					</androidx.constraintlayout.widget.ConstraintLayout>
 
-					<TextView
-						android:id="@+id/tvParticipioPronunciacion"
+					<androidx.constraintlayout.widget.ConstraintLayout
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:layout_gravity="center"
-						android:layout_marginTop="8dp"
-						android:gravity="center"
-						android:text="Titulo"
-						android:textSize="18dp"
-						android:textStyle="bold"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/tvParticipio" />
+						android:layout_marginStart="24dp"
+						app:layout_constraintStart_toEndOf="@+id/constraintLayout4">
+
+						<TextView
+							android:id="@+id/tvPasado"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:gravity="center"
+							android:text="Titulo"
+							android:textSize="18dp"
+							android:textStyle="bold"
+							app:layout_constraintStart_toStartOf="parent"
+							app:layout_constraintTop_toTopOf="parent" />
+
+						<TextView
+							android:id="@+id/tvPasadoPronunciacion"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:layout_marginTop="8dp"
+							android:gravity="center"
+							android:text="Titulo"
+							android:textSize="18dp"
+							android:textStyle="bold"
+							app:layout_constraintStart_toStartOf="parent"
+							app:layout_constraintTop_toBottomOf="@+id/tvPasado" />
+					</androidx.constraintlayout.widget.ConstraintLayout>
 
 					<TextView
 						android:id="@+id/tvTraduccion"
@@ -188,7 +199,7 @@
 						android:textStyle="bold"
 						app:layout_constraintEnd_toEndOf="parent"
 						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/tvPasadoPronunciacion" />
+						app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />
 				</androidx.constraintlayout.widget.ConstraintLayout>
 			</androidx.constraintlayout.widget.ConstraintLayout>
 		</LinearLayout>
