--- a/SayTheWord/app/src/main/res/layout/item_irregular_verb.xml
+++ b/SayTheWord/app/src/main/res/layout/item_irregular_verb.xml
@@ -48,7 +48,8 @@
 						android:textSize="18dp"
 						android:textStyle="bold"
 						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintStart_toStartOf="parent" />
+						app:layout_constraintStart_toStartOf="parent"
+						app:layout_constraintTop_toTopOf="parent" />
 
 					<TextView
 						android:id="@+id/tvPronunciacion"
@@ -127,7 +128,9 @@
 					<androidx.constraintlayout.widget.ConstraintLayout
 						android:id="@+id/constraintLayout4"
 						android:layout_width="wrap_content"
-						android:layout_height="wrap_content">
+						android:layout_height="wrap_content"
+						app:layout_constraintStart_toStartOf="parent"
+						app:layout_constraintTop_toTopOf="parent">
 
 						<TextView
 							android:id="@+id/tvPasado"
@@ -159,10 +162,11 @@
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:layout_marginStart="24dp"
-						app:layout_constraintStart_toEndOf="@+id/constraintLayout4">
+						app:layout_constraintStart_toEndOf="@+id/constraintLayout4"
+						app:layout_constraintTop_toTopOf="parent">
 
 						<TextView
-							android:id="@+id/tvPasado"
+							android:id="@+id/tvParticipio"
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:layout_gravity="center"
@@ -174,7 +178,7 @@
 							app:layout_constraintTop_toTopOf="parent" />
 
 						<TextView
-							android:id="@+id/tvPasadoPronunciacion"
+							android:id="@+id/tvParticipioPronunciacion"
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:layout_gravity="center"
@@ -184,7 +188,7 @@
 							android:textSize="18dp"
 							android:textStyle="bold"
 							app:layout_constraintStart_toStartOf="parent"
-							app:layout_constraintTop_toBottomOf="@+id/tvPasado" />
+							app:layout_constraintTop_toBottomOf="@+id/tvParticipio" />
 					</androidx.constraintlayout.widget.ConstraintLayout>
 
 					<TextView
