--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_palabras.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_palabras.xml
@@ -67,8 +67,10 @@
 						android:id="@+id/tvJuegoCantidadPalabras"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
+						android:gravity="center"
 						android:text="TextView"
-						android:textSize="30sp"
+						android:textSize="@dimen/tamanioTextoJuegoVI"
+						android:textStyle="bold"
 						app:layout_constraintEnd_toEndOf="parent"
 						app:layout_constraintStart_toStartOf="parent"
 						app:layout_constraintTop_toTopOf="parent" />
@@ -79,7 +81,8 @@
 						android:layout_height="wrap_content"
 						android:layout_marginTop="24dp"
 						android:text="TextView"
-						android:textSize="30sp"
+						android:textSize="@dimen/tamanioTextoJuegoVI"
+						android:textStyle="bold"
 						app:layout_constraintEnd_toEndOf="parent"
 						app:layout_constraintStart_toStartOf="parent"
 						app:layout_constraintTop_toBottomOf="@+id/tvJuegoCantidadPalabras" />
@@ -116,7 +119,8 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:text="TextView"
-							android:textSize="30sp"
+							android:textSize="@dimen/tamanioTextoJuegoVI"
+							android:textStyle="bold"
 							app:layout_constraintEnd_toEndOf="parent"
 							app:layout_constraintStart_toStartOf="parent"
 							app:layout_constraintTop_toTopOf="parent" />
@@ -127,7 +131,8 @@
 							android:layout_height="wrap_content"
 							android:layout_marginTop="24dp"
 							android:text="TextView"
-							android:textSize="30sp"
+							android:textSize="@dimen/tamanioTextoJuegoVI"
+							android:textStyle="bold"
 							app:layout_constraintBottom_toBottomOf="parent"
 							app:layout_constraintEnd_toEndOf="parent"
 							app:layout_constraintStart_toStartOf="parent"
