--- a/SayTheWord/SayTheWord/app/src/main/res/menu/action_bar_menu_listado_palabras.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/menu/action_bar_menu_listado_palabras.xml
@@ -13,4 +13,7 @@
 	<item
 		android:id="@+id/item_verTodo"
 		android:title="Ver todo" />
+	<item
+		android:id="@+id/item_AgregarPalabra"
+		android:title="Agregar Palabra" />
 </menu>
