--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_agregar_palabra.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_agregar_palabra.xml
@@ -59,7 +59,7 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
 					android:layout_marginTop="32dp"
-					android:hint="Pronunciacion"
+					android:hint="Pronunciación"
 					app:layout_constraintTop_toBottomOf="@+id/hola2">
 
 					<com.google.android.material.textfield.TextInputEditText
