--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_palabras.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_palabras.xml
@@ -80,6 +80,7 @@
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:layout_marginTop="24dp"
+						android:gravity="center"
 						android:text="TextView"
 						android:textSize="@dimen/tamanioTextoJuegoVI"
 						android:textStyle="bold"
@@ -118,6 +119,7 @@
 							android:id="@+id/tvJuegoPalabraAbajo"
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
+							android:gravity="center"
 							android:text="TextView"
 							android:textSize="@dimen/tamanioTextoJuegoVI"
 							android:textStyle="bold"
@@ -130,6 +132,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:layout_marginTop="24dp"
+							android:gravity="center"
 							android:text="TextView"
 							android:textSize="@dimen/tamanioTextoJuegoVI"
 							android:textStyle="bold"
