--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_verbos_irregulares.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_verbos_irregulares.xml
@@ -80,6 +80,7 @@
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:layout_marginTop="20dp"
+						android:gravity="center"
 						android:text="TextView"
 						android:textSize="@dimen/tamanioTextoJuegoVI"
 						android:textStyle="bold"
@@ -131,6 +132,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:layout_marginTop="16dp"
+							android:gravity="center"
 							android:text="TextView"
 							android:textSize="@dimen/tamanioTextoJuegoVI"
 							android:textStyle="bold"
