se agrega juego de palabras escritas

--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_escribir_palabra.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_escribir_palabra.xml
@@ -4,7 +4,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".Fragments.JuegoEscribirPalabraFragment">
+	tools:context=".Fragments.EscribirPalabra">
 
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
@@ -47,22 +47,6 @@
 					app:layout_constraintStart_toStartOf="parent"
 					app:layout_constraintTop_toTopOf="parent">
 
-					<com.google.android.material.button.MaterialButton
-						android:id="@+id/btPalabraProblematica"
-						style="@style/Widget.MaterialComponents.Button"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="8dp"
-						app:backgroundTint="#ADADAD"
-						app:icon="@drawable/ic_smile"
-						app:iconGravity="textStart"
-						app:iconPadding="0dp"
-						app:iconSize="25dp"
-						app:layout_constraintBottom_toBottomOf="parent"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/btNext" />
-
 					<TextView
 						android:id="@+id/tvJuegoCantidadPalabras"
 						android:layout_width="wrap_content"
@@ -75,48 +59,56 @@
 						app:layout_constraintStart_toStartOf="parent"
 						app:layout_constraintTop_toTopOf="parent" />
 
-					<TextView
-						android:id="@+id/tvJuegoPalabraArriba"
+					<androidx.constraintlayout.widget.ConstraintLayout
+						android:id="@+id/lyContenedor"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:layout_marginTop="24dp"
-						android:gravity="center"
-						android:text="TextView"
-						android:textSize="@dimen/tamanioTextoJuegoVI"
-						android:textStyle="bold"
+						android:layout_marginTop="16dp"
 						app:layout_constraintEnd_toEndOf="parent"
 						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/tvJuegoCantidadPalabras" />
+						app:layout_constraintTop_toBottomOf="@+id/tvJuegoCantidadPalabras">
 
-					<com.google.android.material.button.MaterialButton
-						android:id="@+id/btMostrarRespuestaJuego"
-						android:layout_width="30dp"
-						android:layout_height="30dp"
-						android:layout_marginTop="32dp"
-						android:insetLeft="0dp"
-						android:insetTop="0dp"
-						android:insetRight="0dp"
-						android:insetBottom="0dp"
-						app:backgroundTint="#448AFF"
-						app:icon="@drawable/ic_eye_closed"
-						app:iconGravity="textStart"
-						app:iconPadding="0dp"
-						app:iconSize="25dp"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/tvJuegoPalabraArriba" />
+						<TextView
+							android:id="@+id/tvJuegoPalabraAdivinar"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:gravity="center"
+							android:text="TextView"
+							android:textSize="@dimen/tamanioTextoJuegoVI"
+							android:textStyle="bold"
+							app:layout_constraintEnd_toEndOf="parent"
+							app:layout_constraintStart_toStartOf="parent"
+							app:layout_constraintTop_toTopOf="parent" />
+
+						<com.google.android.material.textfield.TextInputLayout
+							android:id="@+id/textEdit"
+							style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+							android:layout_width="180dp"
+							android:layout_height="wrap_content"
+							android:layout_marginTop="24dp"
+							android:hint="Respuesta"
+							app:layout_constraintEnd_toEndOf="parent"
+							app:layout_constraintStart_toStartOf="parent"
+							app:layout_constraintTop_toBottomOf="@+id/tvJuegoPalabraAdivinar">
+
+							<com.google.android.material.textfield.TextInputEditText
+								android:id="@+id/etRespuesta"
+								android:layout_width="match_parent"
+								android:layout_height="wrap_content" />
+						</com.google.android.material.textfield.TextInputLayout>
+					</androidx.constraintlayout.widget.ConstraintLayout>
 
 					<androidx.constraintlayout.widget.ConstraintLayout
 						android:id="@+id/lyRespuestaJuego"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="32dp"
+						android:layout_width="match_parent"
+						android:layout_height="match_parent"
+						android:layout_marginTop="24dp"
 						app:layout_constraintEnd_toEndOf="parent"
 						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/btMostrarRespuestaJuego">
+						app:layout_constraintTop_toBottomOf="@+id/lyContenedor">
 
 						<TextView
-							android:id="@+id/tvJuegoPalabraAbajo"
+							android:id="@+id/tvSolucion"
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:gravity="center"
@@ -128,55 +120,82 @@
 							app:layout_constraintTop_toTopOf="parent" />
 
 						<TextView
-							android:id="@+id/tvJuegoPalabraAbajo2"
+							android:id="@+id/tvCantidadIntentosRestantes"
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
-							android:layout_marginTop="24dp"
+							android:layout_marginTop="16dp"
 							android:gravity="center"
 							android:text="TextView"
 							android:textSize="@dimen/tamanioTextoJuegoVI"
 							android:textStyle="bold"
-							app:layout_constraintBottom_toBottomOf="parent"
 							app:layout_constraintEnd_toEndOf="parent"
 							app:layout_constraintStart_toStartOf="parent"
-							app:layout_constraintTop_toBottomOf="@+id/tvJuegoPalabraAbajo" />
+							app:layout_constraintTop_toBottomOf="@+id/tvSolucion" />
 					</androidx.constraintlayout.widget.ConstraintLayout>
 
-					<com.google.android.material.button.MaterialButton
-						android:id="@+id/btNext"
-						style="@style/Widget.MaterialComponents.Button"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
+					<androidx.constraintlayout.widget.ConstraintLayout
+						android:layout_width="match_parent"
+						android:layout_height="match_parent"
 						android:layout_marginTop="32dp"
-						android:text="Next"
-						app:backgroundTint="#82B1FF"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego" />
+						app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego">
 
-					<com.google.android.material.button.MaterialButton
-						android:id="@+id/btPrevious"
-						style="@style/Widget.MaterialComponents.Button"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="32dp"
-						android:layout_marginEnd="22dp"
-						android:text="Previous"
-						app:backgroundTint="#82B1FF"
-						app:layout_constraintEnd_toStartOf="@+id/btNext"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego" />
+						<com.google.android.material.button.MaterialButton
+							android:id="@+id/btPrevious"
+							style="@style/Widget.MaterialComponents.Button"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:text="Previous"
+							app:backgroundTint="#82B1FF"
+							app:layout_constraintStart_toStartOf="parent"
+							app:layout_constraintTop_toTopOf="parent" />
 
-					<com.google.android.material.button.MaterialButton
-						android:id="@+id/btRestart"
-						style="@style/Widget.MaterialComponents.Button"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="32dp"
-						android:text="Restart"
-						app:backgroundTint="#82B1FF"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintStart_toStartOf="parent"
-						app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego" />
+						<com.google.android.material.button.MaterialButton
+							android:id="@+id/btRestart"
+							style="@style/Widget.MaterialComponents.Button"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:text="Restart"
+							app:backgroundTint="#82B1FF"
+							app:layout_constraintEnd_toEndOf="parent"
+							app:layout_constraintStart_toStartOf="parent"
+							app:layout_constraintTop_toTopOf="parent" />
+
+						<com.google.android.material.button.MaterialButton
+							android:id="@+id/btNext"
+							style="@style/Widget.MaterialComponents.Button"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_marginStart="24dp"
+							android:text="Next"
+							app:backgroundTint="#82B1FF"
+							app:layout_constraintStart_toEndOf="@+id/btPrevious"
+							app:layout_constraintTop_toTopOf="parent" />
+
+						<com.google.android.material.button.MaterialButton
+							android:id="@+id/btEvaluar"
+							style="@style/Widget.MaterialComponents.Button"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_marginStart="24dp"
+							android:text="Evaluar"
+							app:backgroundTint="#82B1FF"
+							app:layout_constraintStart_toEndOf="@+id/btPrevious"
+							app:layout_constraintTop_toTopOf="parent" />
+
+						<com.google.android.material.button.MaterialButton
+							android:id="@+id/btPalabraProblematica"
+							style="@style/Widget.MaterialComponents.Button"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							app:backgroundTint="#ADADAD"
+							app:icon="@drawable/ic_smile"
+							app:iconGravity="textStart"
+							app:iconPadding="0dp"
+							app:iconSize="25dp"
+							app:layout_constraintEnd_toEndOf="parent"
+							app:layout_constraintStart_toStartOf="parent"
+							app:layout_constraintTop_toBottomOf="@+id/btRestart" />
+					</androidx.constraintlayout.widget.ConstraintLayout>
 				</androidx.constraintlayout.widget.ConstraintLayout>
 			</androidx.constraintlayout.widget.ConstraintLayout>
 		</androidx.cardview.widget.CardView>
