--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_escribir_palabra.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_escribir_palabra.xml
@@ -4,7 +4,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".Fragments.EscribirPalabra">
+	tools:context=".Fragments.JuegoEscribirPalabra">
 
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
@@ -30,8 +30,8 @@
 
 				<ImageView
 					android:id="@+id/ivCongratulations"
-					android:layout_width="match_parent"
-					android:layout_height="match_parent"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
 					android:src="@drawable/congratulation"
 					app:layout_constraintBottom_toBottomOf="parent"
 					app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +81,7 @@
 							app:layout_constraintTop_toTopOf="parent" />
 
 						<com.google.android.material.textfield.TextInputLayout
-							android:id="@+id/textEdit"
+							android:id="@+id/etRespuestaContenedor"
 							style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
 							android:layout_width="180dp"
 							android:layout_height="wrap_content"
@@ -137,6 +137,8 @@
 						android:layout_width="match_parent"
 						android:layout_height="match_parent"
 						android:layout_marginTop="32dp"
+						app:layout_constraintEnd_toEndOf="parent"
+						app:layout_constraintStart_toStartOf="parent"
 						app:layout_constraintTop_toBottomOf="@+id/lyRespuestaJuego">
 
 						<com.google.android.material.button.MaterialButton
