--- a/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_escribir_palabra.xml
+++ b/SayTheWord/SayTheWord/app/src/main/res/layout/fragment_juego_escribir_palabra.xml
@@ -159,6 +159,18 @@
 							android:text="Restart"
 							app:backgroundTint="#82B1FF"
 							app:layout_constraintEnd_toEndOf="parent"
+							app:layout_constraintTop_toTopOf="parent" />
+
+						<com.google.android.material.button.MaterialButton
+							android:id="@+id/btVolver"
+							style="@style/Widget.MaterialComponents.Button"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_marginEnd="16dp"
+							android:text="Volver"
+							app:backgroundTint="#82B1FF"
+							app:layout_constraintEnd_toEndOf="parent"
+							app:layout_constraintEnd_toStartOf="@+id/btRestart"
 							app:layout_constraintStart_toStartOf="parent"
 							app:layout_constraintTop_toTopOf="parent" />
 
